--- a/002.html
+++ b/002.html
@@ -75,15 +75,15 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002023061300342</div></li>
+                    <div class="detail-value " id="reqNo">A4400002023072200342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，湖南省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年06月25日 12时04分至 2023年06月30日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年07月22日 12时04分至 2023年07月30日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---莞长路---大岭山收费站---G9411莞佛高速---G94珠三角环线高速---S41机场高速---G45大广高速---G0422武深高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G0422武深高速---田庄收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>：顺源达建材---S291---白石收费站---S40云茂高速---G65包茂高速---粤桂界<br><hr><span id="pro">广西省</span>:桂粤界---G65包茂高速---朱砂收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -104,13 +104,13 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀E2033Z</div></li>
+                    <div class="detail-value" id="vehicleNo">冀EQ7989</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
                     <div class="detail-value" id="model">CA4250P66K24TA1</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车整备质量：</div>
                     <div class="detail-value" id="vehWeight">8.80吨</div></li>                
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀EKL55挂</div></li>
+                    <div class="detail-value" id="hanvehicleNo">冀ERE85挂</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车厂牌型号：</div>
                     <div class="detail-value" id="hanmodel">LWY9402TDP</div></li>
                 <li class="han-veh ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">挂车整备质量：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>湖南省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
