--- a/002.html
+++ b/002.html
@@ -79,11 +79,11 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
 				<div class="detail-value " id="passDists">福建省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年08月08日 12时04分至 2023年08月15日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年08月09日 12时04分至 2023年08月15日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>：厦门全聚通工程设备租赁有限公司--海沧疏港通道（途经城市道路需自行征求相关管养部门意见）--厦门西收费站--G76厦蓉高速--玉兰枢纽--S30永漳高速--岭头枢纽--G72泉南高速--闽赣界<br><hr><span id="pro">江西省</span>:赣闽界--G72泉南高速---石城南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>：东万晟物流中心--G319--厦门收费站--G2517沙厦高速--云埔枢纽--G1523甬莞高速--凤城枢纽-- G2517沙厦高速--岩峰枢纽--G72泉南高速--闽赣界<br><hr><span id="pro">江西省</span>:赣闽界--G72泉南高速---石城南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
