--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">贵州省</span>：经开收费站---G6002贵阳绕城高速---G76厦蓉高速---G60沪昆高速---贵湘界；<br><hr><span id="pro">湖南省</span>: 湘贵界--- G60沪昆高速---兴隆收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">贵州省</span>：花溪收费站---G6002贵阳绕城高速---G76厦蓉高速---G60沪昆高速---贵湘界；<br><hr><span id="pro">湖南省</span>: 湘贵界--- G60沪昆高速---兴隆收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
